plugins {
    // Kotlin
    id 'org.jetbrains.kotlin.jvm' version '1.9.25'

    //Springboot
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.25'

    // Formatter y Linter
    id 'org.jlleitschuh.gradle.ktlint' version '11.5.0'
    id 'org.jetbrains.kotlinx.kover' version '0.7.3'
}

group = 'com.ingsis.Permission'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.jetbrains.kotlin:kotlin-reflect'
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
    implementation 'org.jetbrains.kotlin:kotlin-reflect'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-reactor'
    implementation 'io.projectreactor.kotlin:reactor-kotlin-extensions'

    annotationProcessor('org.projectlombok:lombok:1.18.34')
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
    testImplementation("org.postgresql:postgresql")
    testImplementation 'org.amshove.kluent:kluent:1.73'
    testImplementation 'io.projectreactor:reactor-test'

    testImplementation("com.h2database:h2")
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'
}

tasks.named('test') {
    useJUnitPlatform()
}

kotlin {
    jvmToolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
    compilerOptions {
        freeCompilerArgs.addAll '-Xjsr305=strict'
    }
}

kover {
    useJacoco()
}

koverReport {
    verify {
        rule {
            bound {
                minValue = 80
            }
        }
        filters {
            excludes {
                packages("config")
            }
        }
    }

    defaults {
        html {
            onCheck = true
        }
    }
}


ktlint {
    disabledRules = ['no-wildcard-imports', 'max-line-length']
}

test {
    jvmArgs("-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage", "-Xshare:off")
}
